# CoLiNa-Engine

./: CMakeLists.txt  LICENSE.txt  README.md
src/: main.cpp
src/game/: Area.cpp  Area.h  GameManager.cpp  GameManager.h  Item.cpp  Item.h
src/game/actions/: Action.cpp  Action.h  ChangeArea.cpp  ChangeArea.h  EndGame.cpp  EndGame.h  Examine.cpp  Examine.h  Print.cpp  Print.h  SetState.cpp  SetState.h
src/game/util/: GameExceptions.h
src/game/util/TinyXML2/: tinyxml2.h
test/: toogle.xml
